Name:                   appar
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               A simple applicative parser
Description:            A simple applicative parser in Parsec style
Category:               Network
Cabal-Version:          >= 1.6
Build-Type:             Simple
library
  if impl(ghc >= 6.12)
    GHC-Options:        -Wall -fno-warn-unused-do-bind
  else
    GHC-Options:        -Wall
  Exposed-Modules:      Text.Appar.String
                        Text.Appar.ByteString
                        Text.Appar.LazyByteString
  Other-Modules:        Text.Appar.Parser
  Build-Depends:        base >= 4 && < 5, bytestring
Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/appar.git
